--- a/src/assets/css/content_view_area.css
+++ b/src/assets/css/content_view_area.css
@@ -609,6 +609,11 @@
                 appearance: none;
             }
 
+            .produce-idol-select-button:hover {
+                opacity: 0.7;
+                transition: 0.3s;
+            }
+
             .produce-idol-level-area {
                 grid-row: 1 / 2;
                 grid-column: 2 / 3;
@@ -625,8 +630,8 @@
 
             .produce-idol-level {
                 display: flex;
-                flex-direction: column;
-                align-items: flex-start;
+                flex-direction: row;
+                align-items: flex-end;
                 padding-right: 32px;
 
                 @media (max-width: 500px) {
@@ -638,8 +643,8 @@
                 }
             }
 
-            .produce-idol-info-text {
-                padding-right: 8px;
+            .produce-idol-level > input {
+                width: 60px;
             }
 
             .produce-idol-parameter-area {
@@ -723,12 +728,70 @@
                 }
             }
 
-            .challenge-item-area {
+            .support-card-area {
+                display: flex;
+                flex-direction: row;
+                flex-wrap: wrap;
+                width: 80%;
                 padding-bottom: 16px;
+
+                @media (max-width: 1000px) {
+                    width: 100%;
+                }
             }
 
-            .support-card-area {
-                padding-bottom: 16px;
+            .support-card {
+                display: flex;
+                flex-direction: column;
+                width: 30%;
+                padding-right: 8px;
+                padding-bottom: 8px;
+
+                @media (max-width: 500px) {
+                    display: flex;
+                    flex-direction: row;
+                    width: 100%;
+                }
+            }
+
+            .support-card-image {
+                width: 196px;
+                height: 110px;
+                min-width: 196px;
+                min-height: 110px;
+                padding-right: 8px;
+                padding-bottom: 8px;
+            }
+
+            .support-card-select-button {
+                width: 100%;
+                height: 100%;
+                background: #efefef;
+                background-size: cover;
+                background-repeat: no-repeat;
+                border: 2px solid #333333;
+                cursor: pointer;
+                outline: none;
+                padding: 0;
+                appearance: none;
+            }
+
+            .support-card-select-button:hover {
+                opacity: 0.7;
+                transition: 0.3s;
+            }
+
+            .support-card-info {
+                display: flex;
+                flex-direction: column;
+            }
+
+            .support-card-name {
+                padding-bottom: 8px;
+            }
+
+            .support-card-level > input {
+                width: 60px;
             }
 
             .produce-memory-area {
