--- a/src/assets/css/content_view_area.css
+++ b/src/assets/css/content_view_area.css
@@ -403,8 +403,8 @@
             background-repeat: no-repeat;
             border: 2px solid #333333;
             display: flex;
-            flex-direction: row;
-            align-items: flex-end;
+            flex-direction: column;
+            justify-content: space-between;
             cursor: pointer;
 
             @media (max-width: 500px) {
@@ -418,6 +418,26 @@
         .produce-idol-image-area:hover {
             opacity: 0.7;
             transition: 0.3s;
+        }
+
+        .produce-idol-plan-area {
+            display: flex;
+            flex-direction: column;
+            padding-left: 4px;
+        }
+
+        .produce-idol-plan-text {
+            color: #ffffff;
+            text-shadow: 1px 1px 2px #333333, -1px 1px 2px #333333, -1px -1px 0 #333333, 1px -1px 0 #333333;
+            font-size: 20px;
+            font-weight: bold;
+            font-family: "Noto Sans JP", serif;
+            font-optical-sizing: auto;
+            font-style: normal;
+
+            @media (max-width: 500px) {
+                font-size: 16px;
+            }
         }
 
         .produce-idol-level-area {
@@ -453,14 +473,6 @@
             @media (max-width: 500px) {
                 font-size: 16px;
                 font-weight: bold;
-            }
-        }
-
-        .produce-idol-plan-area {
-            padding-bottom: 4px;
-
-            @media (max-width: 500px) {
-                padding-bottom: 0;
             }
         }
 
@@ -625,13 +637,23 @@
                 transition: 0.3s;
             }
 
-            .produce-idol-level-area {
+            .produce-idol-info-area {
                 grid-area: 1 / 2 / 2 / 3;
+                height: 100%;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-around;
+
+                @media (max-width: 500px) {
+                    grid-area: 1 / 2 / 2 / 3;
+                }
+            }
+
+            .produce-idol-level-area {
                 display: flex;
                 flex-direction: row;
 
                 @media (max-width: 500px) {
-                    grid-area: 1 / 2 / 2 / 3;
                     display: flex;
                     flex-direction: column;
                 }
