--- a/src/assets/css/content_view_area.css
+++ b/src/assets/css/content_view_area.css
@@ -642,7 +642,7 @@
                 height: 100%;
                 display: flex;
                 flex-direction: column;
-                justify-content: space-around;
+                justify-content: space-between;
 
                 @media (max-width: 500px) {
                     grid-area: 1 / 2 / 2 / 3;
