--- a/src/assets/css/content_view_area.css
+++ b/src/assets/css/content_view_area.css
@@ -938,5 +938,160 @@
                 }
             }
         }
+
+        .planning-area {
+            padding-bottom: 16px;
+
+            .content-area {
+                width: 100%;
+            }
+
+            .schedule-area {
+            }
+
+            .schedule {
+                @media (max-width: 500px) {
+                    overflow-x: scroll;
+                }
+            }
+
+            .parameter-up {
+            }
+
+            .table.schedule {
+                min-width: 630px;
+            }
+
+            .table {
+                .table-header {
+                    text-align: start;
+                }
+
+                .table-header.detail, .table-header.type {
+                    border-bottom: 2px solid #958b7f;
+                }
+
+                .table-header.vocal {
+                    width: 80px;
+                    border-bottom: 2px solid #FB0082;
+                }
+
+                .table-header.dance {
+                    width: 80px;
+                    border-bottom: 2px solid #0086F0;
+                }
+
+                .table-header.visual {
+                    width: 80px;
+                    border-bottom: 2px solid #FAA900;
+                }
+
+                .table-header.hp {
+                    width: 80px;
+                    border-bottom: 2px solid #3CC743;
+                }
+
+                .table-header.point {
+                    width: 80px;
+                    border-bottom: 2px solid #958b7f;
+                }
+
+                .table-header.total, .table-header.count {
+                    width: 80px;
+                    border-bottom: 2px solid #958b7f;
+                }
+
+                .table-data {
+                    text-align: end;
+                }
+
+                .table-data.detail, .table-data.type {
+                    text-align: start;
+                    background: rgba(149, 139, 127, 0.1);
+                }
+
+                .table-data.vocal {
+                    background: rgba(251, 0, 130, 0.1);
+                }
+
+                .table-data.dance {
+                    background: rgba(0, 134, 240, 0.1);
+                }
+
+                .table-data.visual {
+                    background: rgba(250, 169, 0, 0.1);
+                }
+
+                .table-data.hp {
+                    background: rgba(60, 199, 67, 0.1);
+                }
+
+                .table-data.point {
+                    background: rgba(149, 139, 127, 0.1);
+                }
+
+                .table-data.total, .table-data.count {
+                    background: rgba(149, 139, 127, 0.1);
+                }
+
+                .table-data.last {
+                    background: #333333;
+                }
+
+                .table-data-text.vocal {
+                    color: #FB0082;
+                }
+
+                .table-data-text.dance {
+                    color: #0086F0;
+                }
+
+                .table-data-text.visual {
+                    color: #FAA900;
+                }
+
+                .table-data-text.last {
+                    color: #ffffff;
+                }
+
+                .table-select {
+                    width: 100%;
+                    color: #333333;
+                    font-size: 16px;
+                    font-weight: bold;
+                    border: none;
+                    box-sizing: border-box;
+                    background: transparent;
+                }
+
+                .table-select:focus {
+                    border: none;
+                }
+
+                .table-select:focus-visible {
+                    outline: none;
+                }
+
+
+                .table-input-number {
+                    width: 100%;
+                    color: #333333;
+                    font-size: 16px;
+                    font-weight: bold;
+                    text-align: end;
+                    border: none;
+                    box-sizing: border-box;
+                    background: transparent;
+                }
+
+                .table-input-number:focus {
+                    border: none;
+                }
+
+                .table-input-number:focus-visible {
+                    outline: none;
+                }
+            }
+        }
     }
 }
