--- a/src/assets/css/content_view_area.css
+++ b/src/assets/css/content_view_area.css
@@ -376,7 +376,7 @@
             flex-direction: row;
             flex-wrap: wrap;
 
-            @media (max-width: 500px) {
+            @media (max-width: 600px) {
                 display: flex;
                 flex-direction: column;
             }
@@ -388,7 +388,7 @@
             display: flex;
             flex-direction: row;
 
-            @media (max-width: 500px) {
+            @media (max-width: 600px) {
                 width: auto;
                 padding-bottom: 8px;
             }
@@ -407,7 +407,7 @@
             justify-content: space-between;
             cursor: pointer;
 
-            @media (max-width: 500px) {
+            @media (max-width: 600px) {
                 width: 102px;
                 height: 136px;
                 min-width: 102px;
@@ -435,7 +435,7 @@
             font-optical-sizing: auto;
             font-style: normal;
 
-            @media (max-width: 500px) {
+            @media (max-width: 600px) {
                 font-size: 16px;
             }
         }
@@ -456,7 +456,7 @@
             font-optical-sizing: auto;
             font-style: normal;
 
-            @media (max-width: 500px) {
+            @media (max-width: 600px) {
                 font-size: 24px;
             }
         }
@@ -470,7 +470,7 @@
         .produce-idol-name-text {
             font-size: 24px;
 
-            @media (max-width: 500px) {
+            @media (max-width: 600px) {
                 font-size: 16px;
                 font-weight: bold;
             }
@@ -483,7 +483,7 @@
             justify-content: flex-start;
             padding-bottom: 4px;
 
-            @media (max-width: 500px) {
+            @media (max-width: 600px) {
                 display: none;
             }
         }
@@ -504,7 +504,7 @@
                 text-align: start;
                 width: 80px;
 
-                @media (max-width: 500px) {
+                @media (max-width: 600px) {
                     width: 60px;
                 }
             }
@@ -526,13 +526,13 @@
             }
 
             .table-header-text {
-                @media (max-width: 500px) {
+                @media (max-width: 600px) {
                     display: none;
                 }
             }
 
             .table-header-text-abbr {
-                @media (min-width: 501px) {
+                @media (min-width: 601px) {
                     display: none;
                 }
             }
@@ -593,7 +593,7 @@
                 grid-row-gap: 8px;
                 align-items: center;
 
-                @media (max-width: 500px) {
+                @media (max-width: 600px) {
                     display: grid;
                     grid-template-rows: 2fr 3fr;
                     grid-template-columns: 1fr 3fr;
@@ -610,7 +610,7 @@
                 min-height: 205px;
                 grid-area: 1 / 1 / 3 / 2;
 
-                @media (max-width: 500px) {
+                @media (max-width: 600px) {
                     width: 102px;
                     height: 136px;
                     min-width: 102px;
@@ -644,7 +644,7 @@
                 flex-direction: column;
                 justify-content: space-between;
 
-                @media (max-width: 500px) {
+                @media (max-width: 600px) {
                     grid-area: 1 / 2 / 2 / 3;
                 }
             }
@@ -653,7 +653,7 @@
                 display: flex;
                 flex-direction: row;
 
-                @media (max-width: 500px) {
+                @media (max-width: 600px) {
                     display: flex;
                     flex-direction: column;
                 }
@@ -665,7 +665,7 @@
                 align-items: flex-end;
                 padding-right: 32px;
 
-                @media (max-width: 500px) {
+                @media (max-width: 600px) {
                     display: flex;
                     flex-direction: row;
                     align-items: center;
@@ -681,7 +681,7 @@
             .produce-idol-parameter-area {
                 grid-area: 2 / 2 / 3 / 3;
 
-                @media (max-width: 500px) {
+                @media (max-width: 600px) {
                     grid-area: 2 / 1 / 3 / 3;
                 }
             }
@@ -717,19 +717,19 @@
                 }
 
                 .table-header-type.pc-design {
-                    @media (max-width: 500px) {
+                    @media (max-width: 600px) {
                         display: none;
                     }
                 }
 
                 .table-header-text {
-                    @media (max-width: 500px) {
+                    @media (max-width: 600px) {
                         display: none;
                     }
                 }
 
                 .table-header-text-abbr {
-                    @media (min-width: 501px) {
+                    @media (min-width: 601px) {
                         display: none;
                     }
                 }
@@ -759,14 +759,14 @@
                 }
 
                 .table-data.pc-design {
-                    @media (max-width: 500px) {
+                    @media (max-width: 600px) {
                         display: none;
                     }
                 }
             }
 
             .produce-idol-parameter-table.phone-design {
-                @media (min-width: 501px) {
+                @media (min-width: 601px) {
                     display: none;
                 }
             }
@@ -783,7 +783,7 @@
                 grid-row-gap: 16px;
                 padding-top: 8px;
 
-                @media (max-width: 500px) {
+                @media (max-width: 600px) {
                     display: flex;
                     flex-direction: column;
                     grid-column-gap: 0;
@@ -794,7 +794,7 @@
                 display: flex;
                 flex-direction: column;
 
-                @media (max-width: 500px) {
+                @media (max-width: 600px) {
                     display: flex;
                     flex-direction: row;
                 }
@@ -831,7 +831,7 @@
                 min-height: 110px;
                 padding-bottom: 8px;
 
-                @media (max-width: 500px) {
+                @media (max-width: 600px) {
                     padding-right: 8px;
                     padding-bottom: 0;
                 }
@@ -878,7 +878,7 @@
                 grid-row-gap: 16px;
                 padding-top: 8px;
 
-                @media (max-width: 1000px) and (min-width: 501px) {
+                @media (max-width: 1000px) and (min-width: 601px) {
                     display: grid;
                     grid-template-columns: repeat(2, 1fr);
                     grid-template-rows: repeat(2, 1fr);
@@ -947,19 +947,84 @@
             }
 
             .schedule-area {
+                padding-bottom: 16px;
             }
 
             .schedule {
-                @media (max-width: 500px) {
+                @media (max-width: 1000px) {
                     overflow-x: scroll;
                 }
             }
 
-            .parameter-up {
+            .event-area {
+                padding-bottom: 16px;
+                display: grid;
+                grid-template-columns: repeat(3, 1fr);
+                grid-template-rows: 1fr;
+                grid-column-gap: 16px;
+                grid-row-gap: 16px;
+
+                @media (max-width: 1000px) {
+                    display: flex;
+                    flex-direction: row;
+                    flex-wrap: wrap;
+                }
+            }
+
+            .produce-p-item-area {
+                grid-area: 1 / 1 / 2 / 2;
+
+                @media (max-width: 1000px) and (min-width: 601px) {
+                    width: calc(50% - 8px);
+                }
+
+                @media (max-width: 600px) {
+                    width: 100%;
+                }
+            }
+
+            .support-card-event-area {
+                grid-area: 1 / 2 / 2 / 3;
+
+                @media (max-width: 1000px) and (min-width: 601px) {
+                    width: calc(50% - 8px);
+                }
+
+                @media (max-width: 600px) {
+                    width: 100%;
+                }
+            }
+
+            .challenge-p-item-area {
+                grid-area: 1 / 3 / 2 / 4;
+
+                @media (max-width: 1000px) {
+                    width: 100%;
+                }
             }
 
             .table.schedule {
-                min-width: 630px;
+                min-width: 800px;
+            }
+
+            .table.produce-p-item {
+                width: 100%;
+            }
+
+            .table.support-card-event {
+                width: 100%;
+            }
+
+            .table.challenge-p-item {
+                width: 100%;
+
+                @media (max-width: 1000px) and (min-width: 601px) {
+                    width: calc(50% - 8px);
+                }
+
+                @media (max-width: 600px) {
+                    width: 100%;
+                }
             }
 
             .table {
@@ -996,6 +1061,11 @@
                     border-bottom: 2px solid #958b7f;
                 }
 
+                .table-header.count {
+                    width: 60px;
+                    border-bottom: 2px solid #958b7f;
+                }
+
                 .table-data {
                     text-align: start;
                 }
@@ -1004,7 +1074,7 @@
                     text-align: end;
                 }
 
-                .table-data.detail, .table-data.type {
+                .table-data.detail, .table-data.type, .table-data.count {
                     background: rgba(149, 139, 127, 0.1);
                 }
 
