--- a/src/assets/css/content_view_area.css
+++ b/src/assets/css/content_view_area.css
@@ -971,7 +971,7 @@
                 }
             }
 
-            .produce-p-item-area {
+            .challenge-p-item-area {
                 grid-area: 1 / 1 / 2 / 2;
 
                 @media (max-width: 1000px) and (min-width: 601px) {
@@ -983,7 +983,7 @@
                 }
             }
 
-            .support-card-event-area {
+            .produce-p-item-area {
                 grid-area: 1 / 2 / 2 / 3;
 
                 @media (max-width: 1000px) and (min-width: 601px) {
@@ -995,7 +995,7 @@
                 }
             }
 
-            .challenge-p-item-area {
+            .support-card-event-area {
                 grid-area: 1 / 3 / 2 / 4;
 
                 @media (max-width: 1000px) {
@@ -1007,15 +1007,15 @@
                 min-width: 800px;
             }
 
+            .table.challenge-p-item {
+                width: 100%;
+            }
+
             .table.produce-p-item {
                 width: 100%;
             }
 
             .table.support-card-event {
-                width: 100%;
-            }
-
-            .table.challenge-p-item {
                 width: 100%;
 
                 @media (max-width: 1000px) and (min-width: 601px) {
@@ -1072,6 +1072,10 @@
 
                 .table-data.number {
                     text-align: end;
+                }
+
+                .table-data.checkbox {
+                    text-align: center;
                 }
 
                 .table-data.detail, .table-data.type, .table-data.count {
@@ -1136,6 +1140,10 @@
                     outline: none;
                 }
 
+                .table-input-checkbox {
+                    width: 16px;
+                    height: 16px;
+                }
 
                 .table-input-number {
                     width: 100%;
