schedule planning hajime-master support-card-ability count-edit

--- a/src/assets/css/content_view_area.css
+++ b/src/assets/css/content_view_area.css
@@ -1165,6 +1165,10 @@
                     background: #333333;
                 }
 
+                .table-data.input {
+                    cursor: pointer;
+                }
+
                 .table-data-text.vocal {
                     color: #FB0082;
                 }
