--- a/src/assets/css/modal_area.css
+++ b/src/assets/css/modal_area.css
@@ -9,6 +9,16 @@
         z-index: 200;
     }
 
+    .input-modal-window-area {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(51, 51, 51, 0.3);
+        z-index: 300;
+    }
+
     .headline-area {
         display: flex;
         padding-bottom: 8px;
@@ -573,6 +583,7 @@
         .produce-type-button {
             padding-bottom: 16px;
         }
+
         .common-button.hajime-master {
             width: 200px;
             height: 80px;
@@ -587,6 +598,40 @@
             display: flex;
             flex-direction: column;
             justify-content: space-evenly;
+        }
+    }
+
+    .common-input-modal {
+        display: flex;
+        flex-direction: column;
+        background: #ffffff;
+        width: 30%;
+        margin: 40% auto;
+        padding: 16px;
+        border-radius: 8px;
+
+        @media (max-width: 1000px) {
+            margin: 50% auto;
+        }
+
+        @media (max-width: 600px) {
+            width: 90%;
+        }
+
+        .description-area {
+            padding-bottom: 16px;
+        }
+
+        .input-area {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+        }
+
+        .common-button.minus, .common-button.plus {
+            width: 40px;
+            height: 40px;
+            margin: 0 16px;
         }
     }
 }
