--- a/src/assets/css/content_view_area.css
+++ b/src/assets/css/content_view_area.css
@@ -1023,6 +1023,14 @@
                 }
             }
 
+            .support-card-ability-content-area {
+                display: flex;
+                flex-direction: row;
+                flex-wrap: wrap;
+                grid-column-gap: 16px;
+                grid-row-gap: 16px;
+            }
+
             .support-card-ability {
                 @media (max-width: 1000px) {
                     overflow-x: scroll;
