Revert "button focus design"
This reverts commit 3b997dd5a296b867aa1d0a966df7d3617b5a6f68.

--- a/src/assets/css/content_view_area.css
+++ b/src/assets/css/content_view_area.css
@@ -43,7 +43,7 @@
             align-items: center;
         }
 
-        .content-button:hover, .content-button:focus {
+        .content-button:hover {
             background: #ffffff;
             transition: 0.3s;
         }
