--- a/src/assets/css/content_view_area.css
+++ b/src/assets/css/content_view_area.css
@@ -107,10 +107,11 @@
             display: flex;
             flex-direction: row;
             justify-content: space-between;
+            align-items: flex-end;
             padding-top: 16px;
         }
 
-        .card-filter-checkbox-area {
+        .card-filter-checkbox-area, .card-filter-radio-area {
             display: flex;
             flex-direction: row;
             flex-wrap: wrap;
@@ -123,7 +124,7 @@
             }
         }
 
-        .card-filter-checkbox {
+        .card-filter-checkbox, .card-filter-radio {
             padding-right: 16px;
         }
 
